--- a/src/main/resources/assets/better-ecology/lang/en_us.json
+++ b/src/main/resources/assets/better-ecology/lang/en_us.json
@@ -1,4 +1,8 @@
 {
   "item.better-ecology.truffle": "Truffle",
-  "item.better-ecology.truffle.tooltip": "A rare delicacy found by pigs. Can be eaten or used in cooking."
+  "item.better-ecology.truffle.tooltip": "A rare delicacy found by pigs. Can be eaten or used in cooking.",
+  "key.better-ecology.category": "Better Ecology",
+  "key.better-ecology.toggle_debug": "Toggle Ecology Debug",
+  "message.better-ecology.debug_enabled": "Ecology Debug: ON",
+  "message.better-ecology.debug_disabled": "Ecology Debug: OFF"
 }
